--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -2,7 +2,9 @@
 @import "tailwindcss";
 
 
-
+body {
+  font-family: var(--font-inter), sans-serif;
+}
 h1, h2, h3, h4, h5, h6, p, span{
       font-family: "Inter", sans-serif;
 }
